APEX-154: Theming for new Product listing.

--- a/docroot/themes/custom/campbell/templates/views/views-view--product-category--products_by_category.html.twig
+++ b/docroot/themes/custom/campbell/templates/views/views-view--product-category--products_by_category.html.twig
@@ -38,6 +38,7 @@
     'view-display-id-' ~ display_id,
     dom_id ? 'js-view-dom-id-' ~ dom_id,
     'product-listing',
+    'product-category',
   ]
 %}
 <div{{ attributes.addClass(classes) }}>
