--- a/source/themes/custom/campbell/styles/components/_product-listing.scss
+++ b/source/themes/custom/campbell/styles/components/_product-listing.scss
@@ -5,9 +5,6 @@
 }
 
 .product-listing {
-  .view-filters {
-    display: none;
-  }
 
   .view-header {
     font-size: 16px;
@@ -238,13 +235,17 @@
   display: none;
 }
 
-.campbell-product-category-filters {
+.campbell-product-category-filters,
+.view-filters {
   background: $filter-bg url('#{$image-base-path}/left_nav_bg.png') left top repeat-x;
   border-radius: 10px;
   border: 1px solid $gray;
   padding: 5px 15px;
 
   fieldset {
+    margin-right: 0;
+    margin-left: 0;
+
     .fieldset-legend {
       display: block;
       font-weight: $bold;
@@ -279,7 +280,7 @@
   }
 }
 
-//Empty result.
+// Empty result.
 .view-empty {
   text-align: center;
   padding: 10px;
@@ -289,4 +290,12 @@
   background-color: $ivory;
   color: $dark-olive;
   margin-bottom: 30px;
+}
+
+// Product category.
+
+.product-category {
+  .view-filters {
+    display: none;
+  }
 }
