--- a/source/themes/custom/campbell/styles/components/_header.scss
+++ b/source/themes/custom/campbell/styles/components/_header.scss
@@ -245,7 +245,7 @@
   &>.we-mega-menu-li {
     &>a,
     &>.we-mega-menu-li.active>a {
-      color: $white;
+      color: $white !important;
       padding: 11px 20px;
       font-size: 13px;
       font-weight: bold;
