APEX-342: Related Product theming.

--- a/source/themes/custom/campbell/styles/base/_imports.scss
+++ b/source/themes/custom/campbell/styles/base/_imports.scss
@@ -4,6 +4,7 @@
 // -----------------------------------------------------------------------------
 
 @import
+'variables',
 'button',
 'font-family',
 'layout',
