--- a/source/themes/custom/campbell/styles/base/_variables.scss
+++ b/source/themes/custom/campbell/styles/base/_variables.scss
@@ -21,6 +21,7 @@ $mustard: #FCD344;
 $dark-olive: #3D6611;
 $ivory: #FAFAEC;
 $spanish-gray: #999999;
+$platinum: #E6E6E6;
 
 /****** fonts ******/
 $arial: Arial, sans-serif;
