--- a/docroot/themes/custom/campbell/templates/node/node--product-category--full.html.twig
+++ b/docroot/themes/custom/campbell/templates/node/node--product-category--full.html.twig
@@ -68,7 +68,7 @@
  * @ingroup themeable
  */
 #}
-
+{{ attach_library('campbell/node--product-category') }}
 {% set classes = [ 
   'wrapper-content',
 ] %}
