APEX-157: Done theming for media centre landing page.

--- a/docroot/themes/custom/campbell/templates/views/views-view-fields--featured-products-listing--feature_product_page.html.twig
+++ b/docroot/themes/custom/campbell/templates/views/views-view-fields--featured-products-listing--feature_product_page.html.twig
@@ -5,7 +5,7 @@
   <div class="image">
 	{{ fields.field_listing_page_image.content }}
   </div>
-  <div class="overlay"></div>
+  <div class="overlay">&nbsp;</div>
   <div class="overlay-text">
     <h3>{{ fields.title.content }}</h3>
     <div class="bottom-text">{{ fields.field_footer_note.content }}</div>
@@ -16,7 +16,7 @@
 	<div class="image">
 	{{ fields.field_listing_page_image.content }}
   </div>
-  <div class="overlay"></div>
+  <div class="overlay">&nbsp;</div>
   <div class="overlay-text">
     <h3>{{ fields.title.content }}</h3>
     <div class="bottom-text">{{ fields.field_footer_note.content }}</div>
