--- a/source/themes/custom/campbell/styles/base/_variables.scss
+++ b/source/themes/custom/campbell/styles/base/_variables.scss
@@ -22,6 +22,7 @@ $dark-olive: #3D6611;
 $ivory: #FAFAEC;
 $spanish-gray: #999999;
 $platinum: #E6E6E6;
+$dark-spring-green: #26723E;
 
 /****** fonts ******/
 $arial: Arial, sans-serif;
