APEX-157: Media page banner configuration.

--- a/source/themes/custom/campbell/styles/components/_media-center.scss
+++ b/source/themes/custom/campbell/styles/components/_media-center.scss
@@ -3,7 +3,7 @@
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: auto;
   column-gap: 6px;
-  margin: 50px 0;
+  margin: 30px 0;
   @media only screen and (min-width: $tablet) and (max-width: $tablet-max)  {
     grid-template-columns: repeat(3, 1fr);
   }
@@ -35,7 +35,7 @@
   }
 
   &__icon {
-    // background: url('#{$image-base-path}/mediacenter_icons.png') left -250px no-repeat;
+    background: url('#{$image-base-path}/mediacenter_icons.png') left -250px no-repeat;
     width: 57px;
     height: 36px;
     display: block;
