--- a/docroot/themes/custom/campbell/templates/node/node--product--full.html.twig
+++ b/docroot/themes/custom/campbell/templates/node/node--product--full.html.twig
@@ -68,118 +68,118 @@
  * @ingroup themeable
  */
 #}
-{% set classes = [] %}
+{{ attach_library('campbell/product-detail') }}
+{% set classes = [
+  'wrapper-content'
+] %}
 
 <article{{ attributes.addClass(classes) }}>
-  {{ title_prefix }}
-  {% if not page %}
-    <header{{ title_attributes }}>
-      <h3>
-        <a href="{{ url }}" rel="bookmark">{{ label }}</a>
-      </h3>
+  <div class="product-detail">
+    {# Title #}
+    <header{{ title_attributes.addClass('product-detail-content-container__title') }}>
+      <h1>{{ content.field_long_description.0 }}</h1>
     </header>
-  {% endif %}
-  {{ title_suffix }}
-
-  <div{{ content_attributes }}>
-    <div class="node--type-product__page-top">
-      {% if product_images %}
-        <div class="product-detail-slider">
-          <div class="product-detail-slider__container">
-            {% if product_image_count > 1 %}
-              <button class="product-detail-slider__pseudo-prev-button"></button>
-            {% endif %}
-
-            {{ content.field_product_images }}
-
-            {% if product_image_count > 1 %}
-              <button class="product-detail-slider__pseudo-next-button"></button>
-            {% endif %}
-          </div>
-
-          {% if product_image_count > 1 %}
-            <div class="product-detail-slider__thumbs-outer-wrapper">
-              <button
-                class="product-detail-slider__button product-detail-slider__button-prev swiper-button-prev"></button>
-
-              <div class="product-detail-slider__thumbs-container">
-                <div class="product-detail-slider__thumbs-wrapper">
+    <div class="catalog-number">{{'Catalog Number:' | t }} {{ label }}</div>
+    {# Content #}
+    <div{{ content_attributes }}>
+      <div class="node--type-product__page-top">
+      {# Slider and links #}
+      <div class="row">
+        <div class="product-detail__slider">
+          {% if product_images %}
+            {# image slider #}
+            <div class="product-detail-slider">
+              <div class="swiper-container gallery-top">
+                {{ content.field_product_images }}
+              </div>
+              <div class="swiper-container gallery-thumbs">
+                <div class="swiper-wrapper">
                   {{ thumbnails }}
                 </div>
+                {% if product_image_count > 1 %}
+                  <!-- Add Arrows -->
+                  <div class="swiper-button-next image-next"></div>
+                  <div class="swiper-button-prev image-prev"></div>
+                {% endif %}
               </div>
-
-              <button
-                class="product-detail-slider__button product-detail-slider__button-next swiper-button-next"></button>
             </div>
+            {# video popup and slider #}
+            {% if is_video_image %}
+              {# video pop-up #}
+              <a href="#video-popup" class="video-image-thumbnail">
+                <div class="vedio-gallery">&nbsp;</div>
+              </a>
+              <a href="#video-popup" class="watch-video open-popup-link">{{ 'Watch the Video' | t }}</a>
+              {# video pop-up end #}
+              {# video slider #}
+              <div id="video-popup" class="video-slider vedio-gallery">
+                <div class="swiper-container video-top">
+                  {{ content.field_product_images }}
+                </div>
+                <div class="swiper-container video-thumbs">
+                  <div class="swiper-wrapper">
+                    {{ video_thumbnails }}
+                  </div>
+                  <!-- Add Arrows -->
+                  <div class="swiper-button-next video-next"></div>
+                  <div class="swiper-button-prev video-prev"></div>
+                </div>
+              </div>
+            {% endif %}
           {% endif %}
-
-          <span class="download-images-link">
-            <a href="/product-image-download/{{ node.id() }}" class="component-content__link button">{{ 'Download Images'|t }}</a>
-          </span>
         </div>
-      {% endif %}
-
-      <div class="product-detail-content-container">
-        <header{{ title_attributes.addClass('product-detail-content-container__title') }}>
-          <h1>
-            {{ content.field_long_description }}
-          </h1>
-        </header>
-    </div>
-
-    <div class="node--type-product-tabs__content">
-        <div class="node--type-product-tabs__mobile-nav-item">
-          <a href="#features">{{ 'Features'|t }}</a>
-        </div>
-
-        <section class="node--type-product-tabs-tab">
-          <div class="node--type-product__accordion-content">
-            <div class="node--type-product__accordion-content-header">
-              {{ 'Features'|t }}
-            </div>
-
-            {{ content.field_product_features }}
-
+        <div class="product-detail__links">
+          {# Links #}
+          <div class="links__item">
+            <a href="/where-to-buy" title="Find a Distributor" class="btn btn-primary btn-distributor">{{ 'Find a Distributor' | t}}</a>
           </div>
-        </section>
-
-        <div class="node--type-product-tabs__mobile-nav-item">
-          <a href="#specifications">{{ 'Specifications'|t }}</a>
-        </div>
-
-        <section class="node--type-product-tabs-tab">
-          <div class="node--type-product__accordion-content">
-            <div class="node--type-product__accordion-content-header">
-              {{ 'Specifications'|t }}
-            </div>
-
-            {{ content.field_product_specifications }}
+          <div class="links__item">
+            <a href="/product-image-download/{{ node.id() }}" class="btn btn-download">{{ 'Download Images' | t }}</a>
           </div>
-        </section>
+        </div>
       </div>
-
-    {% if pdfs is not null %}
-        <a role="presentation" id="additional-resources"></a>
-        <div class="product-pdfs">
-          <h4>{{ 'Additional Resources'|t }}</h4>
-
-          <div class="pdf-list">
-            {% for pdf in pdfs %}
-              <div class="product-pdf">
-                <a href="{{ pdf['uri'] }}" target="_blank">
-                  <div class="pdf-icon">
-                    <img src="/{{ base_path ~ directory }}/icons/pdf.svg"  alt="{{ 'PDF'|t }}" width="57" height="64"/>
-                  </div>
-                  <div class="pdf-info">
-                    <div class="row">{{ pdf['name'] }}</div>
-                    <div class="row download">{{ 'Download'|t }}</div>
-                  </div>
-                </a>
+      {# tab content #}
+      <div class="product-tabs__content">
+        <div class="tabs-nav">
+          <ul>
+            <li class="active"><a href="#tab1"><span>{{ 'Features'|t }}</span></a></li>
+            <li><a href="#tab2"><span>{{ 'Specifications'|t }}</span></a></li>
+          </ul>
+        </div>
+        <div class="tabs-content">
+          <div id="tab1" class="tabs-content__inner active">
+            <section class="node--type-product-tabs-tab">
+              <div class="node--type-product__accordion-content">
+                <div class="features-head"> {{ content.field_long_description.0 }}</div>
+                {{ content.field_product_features }}
               </div>
-            {% endfor %}
+            </section>
+          </div>
+          <div id="tab2" class="tabs-content__inner">
+            <section class="node--type-product-tabs-tab">
+              <div class="product-specifications">
+                {# {{ content.field_product_specifications }} #}
+                {% for specs in content.field_product_specifications %}
+                  {% set specs_title =  specs['#plain_text']|split(':', 2) %}
+                    <div class="field__item">
+                    {% for key,specs_label in specs_title %}
+                        {% if (loop.index is odd) %}
+                          <div class = 'specs-key'>
+                            {{ specs_label }}
+                          </div>
+                        {% else %}
+                            <div class = 'specs-value'>
+                            {{ specs_label }}
+                            </div>
+                        {% endif %}
+                    {% endfor %}
+                    </div>
+                {% endfor %}
+              </div>
+            </section>
           </div>
         </div>
-      {% endif %}
-
+      </div>
+    </div>
   </div>
 </article>
