--- a/source/themes/custom/campbell/styles/base/_button.scss
+++ b/source/themes/custom/campbell/styles/base/_button.scss
@@ -1,6 +1,7 @@
 .form-submit,
 .btn,
 .btn-primary {
+  font-size: 12px;
   min-width: 115px;
   display: block;
   min-height: 29px;
@@ -13,8 +14,60 @@
   border: solid 1px $pantone;
   color: $white;
 
-  &:hover {
+  &:hover,
+  &:focus,
+  &:focus-visible {
     color: $black;
     border: solid 1px $pantone;
+  }
+}
+
+// Button distributor.
+.btn-distributor {
+  font-size: 12px;
+  padding: 3px 20px;
+  display: inline-flex;
+  align-items: center;
+
+  &:hover,
+  &:focus,
+  &:focus-visible {
+    color: $white;
+  }
+
+  &::before {
+    content: '';
+    width: 20px;
+    height: 20px;
+    background: url('#{$image-base-path}/small_icons.png') left -238px no-repeat;
+    display: inline-block;
+    padding-left: 32px;
+    vertical-align: middle;
+    line-height: 22px;
+  }
+}
+
+// Button download.
+.btn-download {
+  font-size: 12px;
+  padding: 3px 20px;
+  display: inline-flex;
+  align-items: center;
+
+  &:hover,
+  &:focus,
+  &:focus-visible {
+    color: $black;
+  }
+
+  &::before {
+    content: '';
+    width: 20px;
+    height: 20px;
+    background: url('#{$image-base-path}/small_icons.png') left -187px no-repeat;
+    display: inline-block;
+    padding-left: 32px;
+    vertical-align: middle;
+    line-height: 22px;
   }
 }
