--- a/source/themes/custom/campbell/styles/base/_variables.scss
+++ b/source/themes/custom/campbell/styles/base/_variables.scss
@@ -23,6 +23,10 @@ $ivory: #FAFAEC;
 $spanish-gray: #999999;
 $platinum: #E6E6E6;
 $dark-spring-green: #26723E;
+$honeydew: #DCF3E3;
+$aero-blue: #BDE9CB;
+$table-even: #F0F0F0;
+$table-border: #D8D8D8;
 
 /****** fonts ******/
 $arial: Arial, sans-serif;
