--- a/docroot/themes/custom/atg/templates/products/enhanced.html.twig
+++ b/docroot/themes/custom/atg/templates/products/enhanced.html.twig
@@ -5,7 +5,8 @@
 {% set productName   = product.values.coupon_headline is defined ? product.values.coupon_headline : product.name %}
 {% set base_url      = step_asset_base_url() %}
 {% set hero_classes  = ['hero', 'hero-enhanced', 'hero--no-animate'] %}
-{% set enhanced      = get_enhanced_product(product.id, product.slug) %}
+{#{% set enhanced      = get_enhanced_product(product.id, product.slug) %}#}
+{% set enhanced      = get_enhanced_product('SG_711638', 'mpro400gcd-p-hybrid-primary-global-controller') %}
 {% set images        = enhanced.images %}
 {% set product_image = images.product %}
 {% set loading_image = images.loading %}
@@ -153,7 +154,7 @@
         </tabs>
     </section><!-- /.section--product-information -->
 
-    {% if enhanced.related.hits.hits is defined %}
+    {#{% if enhanced.related.hits.hits is defined %}
         {% if enhanced.related.hits.hits|length > 0 %}
             <section class="section section--related-products">
                 <header class="section-header">
@@ -197,7 +198,7 @@
                 </basic-cards>
             </section><!-- /.section--related-products -->
         {% endif %}
-    {% endif %}
+    {% endif %}#}
 
     <section class="section section--centered section--schedule-demo" id="schedule-demo" style="background-image: url({{ theme_asset('/dist/img/enhanced-form-bg-' ~ (product_line.name|lower) ~ '.jpg') }}); ">
         <div class="contain">
