--- a/docroot/themes/custom/cleco/src/scss/components/_sections.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_sections.scss
@@ -244,6 +244,18 @@ body:not(.anim-disabled) {
   .section-header {
     justify-content: center;
   }
+
+  .form-selector {
+    .form-selector-step {
+      .form-selector-form {
+        form {
+          .captcha {
+            font-size: 0;
+          }
+        }
+      }
+    }
+  }
 }
 
 /**
