support/APS-23-31-hubspot-form-styling-and-integration-2:checkbox styling fixed.

--- a/source/themes/custom/crescenttool/styles/base/_inputs.scss
+++ b/source/themes/custom/crescenttool/styles/base/_inputs.scss
@@ -444,3 +444,10 @@ input#privacy_policy-c6fb962f-da94-4cb5-a141-7f7a5f937fc5:checked:after {
   background-color: #F16F43;
   display: block;
 }
+
+.hs_privacy_policy {
+  .inputs-list {
+    list-style: none;
+    padding-left: 0;
+  }
+}
