APEX-336: Addtothis share feature

--- a/docroot/themes/custom/campbell/templates/node/node--product--full.html.twig
+++ b/docroot/themes/custom/campbell/templates/node/node--product--full.html.twig
@@ -136,6 +136,9 @@
           <div class="links__item">
             <a href="/product-image-download/{{ node.id() }}" class="btn btn-download">{{ 'Download Images' | t }}</a>
           </div>
+          <div>
+          {{ addtothis_block_output }}
+          </div>
         </div>
       </div>
       {# tab content #}
