--- a/source/themes/custom/campbell/styles/components/_products-page.scss
+++ b/source/themes/custom/campbell/styles/components/_products-page.scss
@@ -5,6 +5,10 @@
   color: $pantone;
   font-weight: $bold;
   margin-bottom: 30px;
+  @media only screen and (max-width: $tablet) {
+    font-size: 30px;
+    margin-bottom: 15px;
+  }
 }
 
 .products-menu-page {
