APEX-336: Share button Alignments

--- a/docroot/modules/custom/addtothis_apex/templates/add-to-this-content.html.twig
+++ b/docroot/modules/custom/addtothis_apex/templates/add-to-this-content.html.twig
@@ -20,4 +20,6 @@ var addthis_config = {
 }
 </script>
 <!-- AddThis API Config END -->
-{{ addthis_content|raw }}
+<div class ="wrapper-content">
+  {{ addthis_content|raw }}
+</div>
