--- a/source/themes/custom/campbell/styles/components/_products-page.scss
+++ b/source/themes/custom/campbell/styles/components/_products-page.scss
@@ -11,6 +11,12 @@
   }
 }
 
+.addthis-containers {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+}
+
 .products-menu-page {
   margin: 30px 0 25px;
   @media only screen and (max-width: $tablet-max) {
