--- a/source/themes/custom/campbell/styles/components/_market-other.scss
+++ b/source/themes/custom/campbell/styles/components/_market-other.scss
@@ -105,7 +105,7 @@
       color: inherit;
       line-height: 45px;
       width: 85%;
-      @media only screen and (min-width: $tablet-max) {
+      @media only screen and (max-width: $tablet-max) {
         font-size: 24px;
         line-height: 35px;
       }
