--- a/source/themes/custom/campbell/styles/base/_variables.scss
+++ b/source/themes/custom/campbell/styles/base/_variables.scss
@@ -1,7 +1,9 @@
 /****** colors ******/
 $silver: #BBBBBB;
+$silver-secondary: #CDCDCD;
 $light-silver: #D6D6D6;
 $gray: #CCCCCC;
+$gray-secondary: #7E7E7E;
 $dim-gray: #737373;
 $light-gray: #EEEEEE;
 $dark-gray: #222222;
