--- a/source/themes/custom/campbell/styles/components/_where-to-buy.scss
+++ b/source/themes/custom/campbell/styles/components/_where-to-buy.scss
@@ -109,9 +109,15 @@
 
       .views-row {
         padding: 0 10px;
-        margin-bottom: 15px;
+        margin-bottom: 20px;
         @media only screen and (max-width: $tablet) {
           padding: 0;
+        }
+        @media only screen and (min-width: $tablet-max) {
+          width: 200px;
+        }
+        @media only screen and (min-width: $tablet) and (max-width: $tablet-max) {
+          width: 180px;
         }
       }
     }
