--- a/source/themes/custom/campbell/styles/components/_product-detail-page.scss
+++ b/source/themes/custom/campbell/styles/components/_product-detail-page.scss
@@ -143,6 +143,7 @@ ul.field--name-field-product-features {
 
 .gallery-thumbs {
   width: 360px;
+  overflow: hidden;
   @media only screen and (max-width: $tablet-max) {
     width: 300px;
   }
@@ -177,6 +178,8 @@ ul.field--name-field-product-features {
 }
 
 .gallery-top {
+  overflow: hidden;
+
   .swiper-slide {
     width: 360px;
     height: 360px;
