Apex-27: Text color and title color updated in user login and access denied pages.

--- a/source/themes/custom/campbell/styles/components/_page-not-found.scss
+++ b/source/themes/custom/campbell/styles/components/_page-not-found.scss
@@ -13,7 +13,7 @@
 
     h2 {
       float: left;
-      color: $black;
+      color: $pantone;
       font-size: 40px;
       font-weight: 700;
       line-height: 48px;
@@ -32,10 +32,10 @@
 
     p {
       clear: both;
-      color: $black;
       font-size: 16px;
       margin: 0 0 24px;
       line-height: 26px;
+      color: $light-black;
 
       &.left {
         float: left;
