--- a/source/themes/custom/gearwrench/styles/base/_inputs.scss
+++ b/source/themes/custom/gearwrench/styles/base/_inputs.scss
@@ -393,49 +393,59 @@ $active-gap: 8px; // the math likes px values
 }
 
 //input checbox for hubspot form
-.hs-i_ve_read_and_accept_the_privacy_policy{
-  .hs-form-booleancheckbox {
-    .hs-form-booleancheckbox-display {
-
-      input[type='checkbox'] {
-        background: #EB8900;
-        border: 1px solid #272525;
-        content: '';
-        height: 1.125rem;
-        left: 0;
-        position: absolute;
-        top: 0;
-        width: 1.125rem;
-        border-radius: 1px;
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        &::after {
-          @include icon-styles;
-          color: $black;
-          content: icon-char(checkmark);
-          font-size: rem(10px);
-          height: $active-width;
-          width: $active-width;
+.hbspt-form {
+  .hs-i_ve_read_and_accept_the_privacy_policy{
+    .hs-form-booleancheckbox {
+      .hs-form-booleancheckbox-display {
+  
+        input[type='checkbox'] {
+          background: #EB8900;
+          border: 1px solid #272525;
+          content: '';
+          height: 1.125rem;
+          left: 0;
           position: absolute;
-          top: 3px;
-          left: 0.1rem;
-          display: none;
-        }
-        &:checked {
-          background-color:  #EB8900;
-
+          top: 0;
+          width: 1.125rem;
+          border-radius: 1px;
+          cursor: pointer;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+  
           &::after {
-            background-color:  #EB8900;;
-            display: block;
+            @include icon-styles;
+            color: $black;
+            content: icon-char(checkmark);
+            font-size: rem(10px);
+            height: $active-width;
+            width: $active-width;
+            position: absolute;
+            top: 3px;
+            left: 0.1rem;
+            display: none;
+          }
+          &:checked {
+            background-color:  #EB8900;
+  
+            &::after {
+              background-color:  #EB8900;;
+              display: block;
+            }
           }
         }
       }
     }
   }
-}   
+  .hs_submit {
+    .actions {
+      .hs-button {
+        background: unset !important;
+        background-color: black !important;
+      }
+    }
+  }
+}
 
 label.hs-form-booleancheckbox-display {
   cursor: pointer;
