Apex-161: Creation for privacy policy and return policy and brands pages styling.

--- a/source/themes/custom/campbell/styles/components/_warranty.scss
+++ b/source/themes/custom/campbell/styles/components/_warranty.scss
@@ -1,3 +1,4 @@
+.return-policy,
 .warranty {
 
   #wrapper {
@@ -41,6 +42,11 @@
               font-weight: 400;
               color: $light-black;
             }
+
+            a {
+              color: $pantone;
+              text-decoration: underline;
+              }
           }
         }
       }
@@ -69,6 +75,7 @@
           .field--name-body {
             a {
               color: $pantone;
+              text-decoration: underline;
             }
 
             h3 {
