APEX-334: Theming for contact form

--- a/source/themes/custom/campbell/styles/base/_form.scss
+++ b/source/themes/custom/campbell/styles/base/_form.scss
@@ -5,6 +5,7 @@ select {
   border-right: 1px solid $gray;
   border-bottom: 1px solid $gray;
   border-left: 1px solid $dim-gray;
+  border-radius: 5px;
   padding: 6px 5px;
   background: linear-gradient(180deg, $gray, $white, 5%);
   color: $dim-gray;
