--- a/source/themes/custom/campbell/styles/base/_variables.scss
+++ b/source/themes/custom/campbell/styles/base/_variables.scss
@@ -30,6 +30,7 @@ $honeydew: #DCF3E3;
 $aero-blue: #BDE9CB;
 $table-even: #F0F0F0;
 $table-border: #D8D8D8;
+$racing-red: #CC0000;
 
 /****** fonts ******/
 $arial: Arial, sans-serif;
