--- a/source/themes/custom/campbell/styles/components/_features.scss
+++ b/source/themes/custom/campbell/styles/components/_features.scss
@@ -97,6 +97,12 @@
   }
 }
 
+.field--type-block-field {
+  .homepage-sidebar-block {
+    background: none;
+  }
+}
+
 .webform-submission-sign-up-form {
   input.form-email {
     width: 90%;
