--- a/source/themes/custom/campbell/styles/base/_typography.scss
+++ b/source/themes/custom/campbell/styles/base/_typography.scss
@@ -28,13 +28,38 @@ body {
   }
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: $pantone;
+  line-height: 1.3;
+}
+
 a {
   text-decoration: none;
   -webkit-font-smoothing: antialiased;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0);
 }
 
+ol,
 ul {
   list-style-type: none;
   padding-left: 0;
+
+  li {
+    font-size: 13px;
+    line-height: 1.5;
+    color: $light-black;
+    font-family: $helvetica;
+  }
+}
+
+p {
+  font-size: 13px;
+  line-height: 1.5;
+  color: $light-black;
+  font-family: $helvetica;
 }
