APEX-145: Changes related to products landing page

--- a/docroot/themes/custom/atg/templates/paragraphs/paragraph--products-category-section.html.twig
+++ b/docroot/themes/custom/atg/templates/paragraphs/paragraph--products-category-section.html.twig
@@ -24,7 +24,7 @@
                         body: body,
                         peek: true,
                         size: 'large',
-                        image: (image is not empty) ? step_asset_base_url() ~ 'styles/thumb/' ~ image : ''
+                        image: (image is not empty) ? image : ''
                     } %}
                 </li>
             {% endfor %}
