APEX-159: Media center pages.

--- a/source/themes/custom/campbell/styles/components/_features.scss
+++ b/source/themes/custom/campbell/styles/components/_features.scss
@@ -27,6 +27,7 @@
 
   p {
     margin-bottom: 0;
+    color: $white;
     display: inline-block;
   }
 
@@ -207,6 +208,7 @@
       text-align: center;
       font-size: 18px;
       text-shadow: 0 0 3px $para, 0 0 3px $para;
+      color: $white;
     }
 
     .bottom-text {
@@ -216,6 +218,7 @@
       p {
         margin-bottom: 0;
         font-weight: $bold;
+        color: $white;
       }
     }
   }
