--- a/source/themes/custom/campbell/styles/base/_form.scss
+++ b/source/themes/custom/campbell/styles/base/_form.scss
@@ -1,5 +1,6 @@
 input,
-select {
+select,
+textarea {
   width: 100%;
   border-top: 1px solid $dim-gray;
   border-right: 1px solid $gray;
@@ -14,4 +15,14 @@ select {
     padding: 0 10px;
     color: $dim-gray;
   }
+}
+
+.webform-confirmation__message,
+.webform-confirmation__back {
+  width: 100%;
+  margin: 30px 0;
+  text-align: center;
+  padding: 10px;
+  background: $filter-bg;
+  border: solid 1px $alto;
 }
