Apex-446: About us and warranty pages QA feedback has been completed.

--- a/source/themes/custom/campbell/styles/components/_about-us.scss
+++ b/source/themes/custom/campbell/styles/components/_about-us.scss
@@ -36,10 +36,13 @@
       h4 {
         margin: 0;
         padding: 0;
+        color: $pantone;
+        font-weight: 400;
       }
 
       p {
         margin: 0 0 30px;
+        color: $light-black;
 
         a {
           color: $pantone;
