--- a/source/themes/custom/campbell/styles/components/_page-not-found.scss
+++ b/source/themes/custom/campbell/styles/components/_page-not-found.scss
@@ -13,11 +13,13 @@ article[about='/access-denied'] {
 
     h2 {
       float: left;
+      color: $pantone;
       margin: 20px 0 8px;
     }
 
     p {
       clear: both;
+      color: $light-black;
       margin: 0 0 24px;
 
       &.left {
