--- a/source/themes/custom/campbell/styles/components/_privacy-policy.scss
+++ b/source/themes/custom/campbell/styles/components/_privacy-policy.scss
@@ -19,10 +19,11 @@
     }
 
     .field--name-body {
-      h2 {
+      h4 {
         font-size: 24px;
         line-height: 24px;
         margin: 0 0 16px;
+        color: $pantone;
 
         @media only screen and(max-width: $tablet-max) {
           font-size: 22px;
@@ -43,6 +44,7 @@
       }
 
       p {
+        color: $light-black;
         margin: 0 0 16px;
       }
 
