--- a/source/themes/custom/campbell/styles/components/_warranty.scss
+++ b/source/themes/custom/campbell/styles/components/_warranty.scss
@@ -40,6 +40,7 @@
           .field--name-body {
             p {
               margin: 19px 0;
+              color: $light-black;
             }
 
             a {
@@ -77,11 +78,16 @@
               text-decoration: underline;
             }
 
+            h5,
             h3 {
+              margin: 0;
               color: $black;
-              margin: 0 0 35px;
               font-size: 17px;
               font-weight: 700;
+            }
+
+            h3 {
+              margin: 0 0 35px;
             }
 
             h4 {
@@ -98,10 +104,17 @@
               strong {
                 margin: 0;
                 padding: 0;
+                font-size: 15px;
                 color: $lighter-gray;
               }
             }
           }
+        }
+
+        .underline {
+          margin: 0 0 15px !important;
+          padding: 0 0 30px;
+          background: url('#{$image-base-path}/contactus_right_block_sep.png') left bottom no-repeat !important;
         }
       }
     }
