--- a/source/themes/custom/campbell/styles/components/_contact.scss
+++ b/source/themes/custom/campbell/styles/components/_contact.scss
@@ -1,5 +1,27 @@
 /****** Contact page ******/
 
+.about-uscontact-us {
+  #wrapper {
+    .node__content,
+    .block-page-title-block {
+      max-width: 1000px;
+      margin: 0 auto;
+      word-wrap: break-word;
+      @media only screen and (max-width: $tablet-max) {
+        padding: 0 20px;
+      }
+
+      @media only screen and (min-width: $tablet-max) {
+        width: 1000px;
+      }
+
+      .page-title {
+        margin: 15px 0 25px;
+      }
+    }
+  }
+}
+
 .contact-accordion {
   .accordion-title {
     position: relative;
