--- a/source/themes/custom/campbell/styles/components/_media-center-type.scss
+++ b/source/themes/custom/campbell/styles/components/_media-center-type.scss
@@ -33,6 +33,7 @@
           justify-content: flex-end;
           @media only screen and(max-width: $tablet) {
             justify-content: flex-start;
+            margin: 0;
           }
 
           label {
@@ -47,11 +48,16 @@
             padding: 0 16px;
 
             @media only screen and(max-width: $tablet) {
+              width: 100%;
+              padding: 0;
               margin-bottom: 16px;
             }
 
             select {
               padding: 2px;
+              @media only screen and(max-width: $tablet) {
+                width: 100%;
+              }
             }
 
             &.form-actions {
