APEX-348: Theming for vedio gallery page and hide share for contact page.

--- a/source/themes/custom/campbell/styles/components/_header.scss
+++ b/source/themes/custom/campbell/styles/components/_header.scss
@@ -337,6 +337,7 @@
 
   &.products-menu {
     @media only screen and (min-width: $tablet-max) {
+      display: none;
       background-color: $white;
       min-width: 1000px;
       padding: 15px 0;
