APEX-416: Brand Timeline - Theming
This reverts commit 566936867686a9fdaa6745496c417d6506422606.

--- a/source/themes/custom/campbell/styles/components/_where-to-buy.scss
+++ b/source/themes/custom/campbell/styles/components/_where-to-buy.scss
@@ -69,11 +69,20 @@
     .form-item {
       display: flex;
       flex-direction: column;
+      position: relative;
 
       label {
         text-transform: uppercase;
         color: $lighter-gray;
         font-weight: normal;
+      }
+
+      .form-item--error-message {
+        position: absolute;
+        bottom: -17px;
+        @media only screen and (min-width: $tablet-max) {
+          bottom: 0;
+        }
       }
     }
   }
